Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-10399

[R] Fix performance regression from cpp11::r_string

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • 2.0.0
    • 3.0.0
    • R

    Description

      On a taxi CSV read demo, reading a data.frame went from ~7 seconds to ~30 seconds. One of the cpp11 changes was identified to be a cause, and reverting it recovered the lost performance.

      Attachments

        Issue Links

          Activity

            People

              npr Neal Richardson
              npr Neal Richardson
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 20m
                  1h 20m

                  Slack

                    Issue deployment