ARROW-10399: [R] Fix performance regression from cpp11::r_string

@bkietz and I identified the performance regression I observed today, and by more-or-less reverting https://github.com/apache/arrow/commit/55defbf7a14896dc1a166f04f62f576179b4a1d5#diff-090c5cff4eadd62a121e85babd186c9838055d2757670971204817eb2d96211aR297-R313 (Ben suggested renaming the function and calling GetView instead of GetString), the performance regression went away.

I haven't investigated why the `cpp11::r_string` way is so significantly slower but it's worth exploring. We should also make sure we aren't inefficiently calling that elsewhere.

cc @kszucs

Closes #8536 from nealrichardson/r-string-perf

Authored-by: Neal Richardson <neal.p.richardson@gmail.com>
Signed-off-by: Benjamin Kietzman <bengilgit@gmail.com>